# rmm

./: docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/routes/lavandaria/: route.tsx  status_card.tsx  types.ts
services/: .gitignore  README.md
services/lavandaria/: .gitignore  Dockerfile.api  Dockerfile.fetcher  pyproject.toml  test.json
services/lavandaria/rmm/lavandaria/: api_client.py  app.py  models.py  router.py  scheduler.py  schema.py  service.py  setup.py
services/rmm_core/: pyproject.toml
services/rmm_core/rmm_core/: api.py  util.py
